2011-06-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Small fixes.

	* src/dlvhex/Makefile.am (dlvhex_LDADD): Move @LIBCURL@ to the
	end of the list, linux i386 linker is sensitive to this.

	* configure.ac: Fix messages.

	* examples/tests/query_hex_ground1ca.stdout: Remove whitespace in
	wc output. (ticket #46)

2011-05-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Check for g++ >= 4.3.

2011-XX-XX  Peter Schueller  <ps@kr.tuwien.ac.at>

	Most important changes (i.e., the reason for the new version):

	* TODO details [rewrote model building according to LPNMR2011 paper: new dependency notion, evalgraph, evaluation heuristics, ...]
	* evaluation heuristics selectable with --heuristics=...
	* query support (ground and nonground queries, support for displaying all witnesses, incremental cautious nonground querying, external atoms currently not possible in queries)

	Plugin API changes:

	* Plugins must now return PluginAtomPtrs/PluginConverterPtrs/... that use
	a "deleter" compiled into the respective plugin (see PluginInterface.h)
	* New central auxiliary constant management method in Registry:
	getAuxiliaryConstantSymbol(), PluginAtom no longer manages its auxiliaries.
	* added comfortable "text-only no-registry-ID-trouble" (and slow) plugin interface ComfortPluginInterface.hpp
	* Plugins may now provide an alternative HEX parser by overriding createParser()

	Testing and debugging additions:

	* New Logger component with log-levels, hierarchical indentation and
	NDEBUG-dependent logging.
	* Printhelpers.hpp utilities for comfortable printing of various boost
	and STL containers.
	* testsuite/run-dlvhex-tests.sh: Added possibility for negative testcases.
	(See comments in trunk/run-dlvhex-tests.sh for some documentation.)
	* testsuite/answerset_compare.py: New script for real set-comparison for
	verifying answer-sets (previously the order of answer sets mattered).
	* src/dlvhex/gdbdlvhex.sh: Added shellscript to use gdb with